replace with react-bootstrap components

--- a/src/styles/base/_variable.scss
+++ b/src/styles/base/_variable.scss
@@ -4,6 +4,7 @@ $color-lightblue: #2196f3;
 
 $color-green: #36b37e;
 
+$yellow: #fb9c00;
 $color-yellow-dark: #fb9c00;
 $color-yellow: #efa226;
 $color-yellow-light: #fcce81;
