--- a/src/styles/components/_elements.scss
+++ b/src/styles/components/_elements.scss
@@ -1,16 +1,5 @@
 // elements
 .btn {
-  display: inline-block;
-  text-align: center;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  user-select: none;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   border: none;
   &:focus {
     box-shadow: none !important;
@@ -21,7 +10,7 @@
   }
 }
 
-.btn-primary {
+.btn-warning {
   height: 48px;
   box-shadow: 0 10px 25px 0 rgba(21, 37, 72, 0.1);
   background-color: #fb9c00;
@@ -32,9 +21,14 @@
   letter-spacing: 0;
   line-height: 22px;
   text-align: center;
+  &:hover,
+  &:focus,
+  &:active {
+    color: #ffffff !important;
+  }
 }
 
-.btn-primary-outlined {
+.btn-outline-warning {
   height: 48px;
   box-shadow: 0 10px 25px 0 rgba(21, 37, 72, 0.1);
   background-color: #ffffff;
@@ -45,6 +39,12 @@
   letter-spacing: 0;
   line-height: 22px;
   text-align: center;
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: #ffffff;
+    color: #fb9c00;
+  }
 }
 
 .input-outlined {
