--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,3 @@
-@import "../../node_modules/bootstrap/scss/functions";
-@import "../../node_modules/bootstrap/scss/variables";
-
 $grid-breakpoints: (
   xs: 0,
   sm: 567px,
@@ -18,14 +15,14 @@ $container-max-widths: (
 
 $grid-gutter-width: 24px;
 
-@import "../../node_modules/bootstrap/scss/bootstrap-grid";
-
 // base styles
 @import "./base/variable";
 @import "./base/mixins";
 @import "./base/fonts";
 @import "./base/typo";
 @import "./base/global";
+
+@import "~bootstrap/scss/bootstrap";
 
 // component styles
 @import "../../node_modules/slick-carousel/slick/slick.css";
