call-form phone number mask

--- a/src/styles/components/_elements.scss
+++ b/src/styles/components/_elements.scss
@@ -125,3 +125,14 @@
     transform: scale(1.1);
   }
 }
+
+.error {
+  color: red;
+  background: #dde1df;
+  text-align: center;
+  border-radius: 4px;
+  padding: 4px 8px;
+  & + & {
+    margin-top: 8px;
+  }
+}
