fix avatar css, update topic anchor and postContent

--- a/src/styles/pages/_blog.scss
+++ b/src/styles/pages/_blog.scss
@@ -45,12 +45,6 @@
     display: flex;
     align-items: center;
     padding-right: 20px;
-    img {
-      margin-right: 12px;
-      width: 36px;
-      height: 36px;
-      border-radius: 50%;
-    }
     p {
       margin-bottom: 0;
       span {
@@ -60,6 +54,15 @@
         letter-spacing: 0;
         line-height: 28px;
       }
+    }
+  }
+  &__profile {
+    img {
+      margin-right: 12px;
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      object-fit: cover;
     }
   }
 }
@@ -84,7 +87,7 @@
   > div {
     margin: 0;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     a {
       min-width: 260px;
       margin-bottom: 12px;
@@ -97,11 +100,14 @@
       letter-spacing: -0.08px;
       text-decoration: underline;
     }
-    a::before {
+    a.topic-list::before {
       content: "•";
       position: absolute;
       left: 0;
       top: 0;
+    }
+    a.topic-item {
+      padding-left: 50px;
     }
   }
 }
@@ -184,13 +190,25 @@
     line-height: 20px;
   }
   &__avatar {
-    margin-right: 20px;
-    img {
-      max-width: 151px;
+    margin-right: 5%;
+    width: 20%;
+    max-width: 150px;
+    > div {
+      position: relative;
+      width: 100%;
+      padding-top: 100%;
+      img {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
   }
 
   &__description {
+    width: 75%;
     h5 {
       margin-bottom: 0;
     }
@@ -262,7 +280,12 @@
         flex-direction: column;
       }
     }
+    &__avatar {
+      width: 100%;
+      margin-right: 0;
+    }
     &__description {
+      width: 100%;
       margin-top: 20px;
     }
   }
