--- a/src/styles/pages/_blog.scss
+++ b/src/styles/pages/_blog.scss
@@ -174,6 +174,55 @@
   }
 }
 
+.blog-listing {
+  &--item {
+    padding: 20px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid #e5eaf4;
+    border-radius: 5px;
+    background-color: #ffffff;
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.08);
+    > div {
+      display: flex;
+      flex-direction: column;
+      h3 {
+        margin-bottom: 20px;
+      }
+      .btn {
+        margin: auto;
+        line-height: 40px;
+        min-width: 100px;
+      }
+    }
+    &__summary {
+      display: flex;
+      p {
+        margin-bottom: 0;
+        span {
+          text-decoration: underline;
+          color: #3a586e;
+          font-weight: bold;
+          letter-spacing: 0;
+          line-height: 28px;
+        }
+      }
+    }
+    &__profile {
+      display: flex;
+      padding-right: 20px;
+      img {
+        margin-right: 12px;
+        width: 36px;
+        height: 36px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+    }
+  }
+}
+
 .blog-profile {
   display: flex;
   flex-direction: column;
