--- a/src/styles/pages/_blog.scss
+++ b/src/styles/pages/_blog.scss
@@ -113,6 +113,7 @@
 }
 
 .blog__content {
+  margin-bottom: 100px;
   h3 {
     margin-bottom: 10px;
     color: #183b56;
@@ -131,7 +132,8 @@
     letter-spacing: -0.8px;
     line-height: 34px;
   }
-  p {
+  p,
+  li {
     margin-bottom: 20px;
     color: #5a7184;
     font-family: "DM Sans";
