--- a/src/styles/components/_elements.scss
+++ b/src/styles/components/_elements.scss
@@ -8,6 +8,10 @@
   font-weight: bold;
   letter-spacing: -0.2px;
   line-height: 52px;
+  img {
+    width: 100%;
+    object-fit: cover;
+  }
 }
 
 .btn {
