fix scrolltop, add terms page

--- a/src/styles/pages/_blog.scss
+++ b/src/styles/pages/_blog.scss
@@ -114,6 +114,13 @@
 
 .blog__content {
   margin-bottom: 100px;
+  h2 {
+    margin-bottom: 10px;
+    color: #183b56;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 52px;
+  }
   h3 {
     margin-bottom: 10px;
     color: #183b56;
